<resources>
    <!-- App Name and Information -->
    <string name="app_name" translatable="false">Linky</string>
    <string name="app_author" translatable="false">Fernando Barillas</string>
    <string name="author_github_url" translatable="false">https://github.com/fbis251</string>
    <string name="author_website_url" translatable="false">https://fernandobarillas.com</string>

    <!-- Activity Titles -->
    <string name="title_about">About Linky</string>
    <string name="title_add_link">Save to Linky</string>
    <string name="title_edit_link">Edit Link</string>
    <string name="title_settings">Settings</string>

    <!-- Common Strings -->
    <string name="address">Address</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="archived">Archived</string>
    <string name="category">Category</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>

    <!-- LinksListActivity strings -->
    <string name="action_settings">Settings</string>
    <string name="browse_category">Browse Category</string>
    <string name="category_uncategorized">Uncategorized</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_all_links">All</string>
    <string name="nav_archived_links" translatable="false">@string/archived</string>
    <string name="nav_favorite_links">Favorites</string>
    <string name="nav_fresh_links">Fresh</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_welcome_format">Welcome, %1$s</string>
    <string name="title_categories">Categories</string>
    <string name="title_links_format" translatable="false">%1$s: %2$d</string>
    <string name="title_all_links">All Links</string>
    <string name="title_archived_links">Archived Links</string>
    <string name="title_category_links_format">%1$s Links</string>
    <string name="title_favorite_links">Favorite Links</string>
    <string name="title_fresh_links">Fresh Links</string>
    <string name="sort_title_ascending">Title A → Z</string>
    <string name="sort_title_descending">Title Z → A</string>
    <string name="sort_timestamp_ascending">Oldest → Newest</string>
    <string name="sort_timestamp_descending">Newest → Oldest</string>
    <string name="confirm_exit_title">Exit Confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_button_positive">Yes</string>
    <string name="confirm_exit_button_negative">No</string>
    <string name="link_update_success">%1$s Success: %2$s</string>
    <string name="link_update_error">%1$s Error: %2$s</string>
    <string name="link_update_error_refresh">Error updating link, please refresh</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_http" translatable="false">http</string>
    <string name="prompt_server_address">Server Address</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_server_address">This server address is invalid</string>
    <string name="error_empty_server_response">The server sent back an empty response, please contact the admin</string>
    <string name="error_invalid_json">The server sent an invalid JSON response, please contact the admin</string>
    <string name="error_unknown">An unknown error has occurred, please try again</string>
    <string name="error_http_format">HTTP Error %1$d, please try again later</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>

    <!-- Link view -->
    <string name="link_information_separator" translatable="false">•</string>

    <!-- About Activity -->
    <string name="about_text">Proudly made in the USA by</string>
    <string name="about_github_content_description">Open Github Profile</string>
    <string name="about_website_content_description">Open Author Website</string>

    <!-- Add Link Activity -->
    <string name="add_link_edit">Edit Link</string>
    <string name="add_link_error">There was an error adding your link</string>
    <string name="add_link_success">Successfully added your link</string>

    <!-- Edit Link Activity -->
    <string name="edit_link_error">There was an error editing your link</string>
    <string name="category_add_new">Add new category…</string>
    <string name="add_new_category_title">New Category</string>
    <string name="add_new_category_empty_error">Category cannot be empty</string>

    <!-- Settings Activity -->
    <!-- Behavior -->
    <string name="preference_category_behavior">Behavior</string>
    <string name="preference_tap_category_key">pref_tap_category</string>
    <string name="preference_tap_category_title">Tap Category Name to Browse</string>
    <string name="preference_tap_category_summary_on">Tapping a category will browse links for that category</string>
    <string name="preference_tap_category_summary_off">Tapping a category does nothing</string>

    <string name="preference_hide_toolbar_on_scroll_key">pref_hide_toolbar_on_scroll</string>
    <string name="preference_hide_toolbar_on_scroll_title">Hide Toolbar on Scroll</string>
    <string name="preference_hide_toolbar_on_scroll_summary_on">Toolbar will hide when the list is scrolled</string>
    <string name="preference_hide_toolbar_on_scroll_summary_off">Toolbar will never hide</string>

    <string name="preference_confirm_exit_on_back_press_key">pref_confirm_exit_on_back_press</string>
    <string name="preference_confirm_exit_on_back_press_title">Confirm Exit on Back Press</string>
    <string name="preference_confirm_exit_on_back_press_summary_on">App will ask you to confirm exiting when you press the back key</string>
    <string name="preference_confirm_exit_on_back_press_summary_off">App will exit when you press the back key</string>

    <!-- Debug -->
    <string name="preference_use_http_proxy_key">pref_use_http_proxy</string>
    <string name="preference_http_proxy_address_key">pref_http_proxy_address</string>
    <string name="preference_http_proxy_port_key">pref_http_proxy_port</string>
    <string name="preference_use_logcat_line_numbers_key">pref_use_logcat_line_numbers</string>
    <string name="preference_log_errors_only_key">pref_log_errors_only</string>
    <string name="preference_log_http_calls_key">pref_log_http_calls</string>

    <!-- Information -->
    <string name="preference_category_information">Information</string>
    <string name="preference_about_activity_title">@string/title_about</string>
    <string name="preference_about_activity_summary">View application information</string>
    <string name="preference_licenses_key">pref_licenses</string>
    <string name="preference_licenses_title">Licenses</string>
    <string name="preference_licenses_summary">View software licenses</string>

    <!-- Errors and messages -->
    <string name="share_intent_error">No apps can handle that link</string>
    <string name="open_url_error">No apps can open that link</string>
    <string name="error_cannot_edit">Cannot edit that link. Please refresh</string>
    <string name="error_cannot_show_category">Cannot show category. Please refresh</string>
    <string name="error_category_blank">Link does not have a category</string>
    <string name="error_link_null">Link data is missing, cannot open</string>
    <string name="error_link_url_null">No URL was found for that link</string>
    <string name="error_link_favorite">Could not add link to favorites</string>
</resources>
