<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
            android:title="@string/preference_category_behavior">

        <android.support.v7.preference.SwitchPreferenceCompat
                android:defaultValue="@bool/preference_tap_category_default"
                android:key="@string/preference_tap_category_key"
                android:summaryOff="@string/preference_tap_category_summary_off"
                android:summaryOn="@string/preference_tap_category_summary_on"
                android:title="@string/preference_tap_category_title"/>

        <android.support.v7.preference.SwitchPreferenceCompat
                android:defaultValue="@bool/preference_hide_toolbar_on_scroll_default"
                android:key="@string/preference_hide_toolbar_on_scroll_key"
                android:summaryOff="@string/preference_hide_toolbar_on_scroll_summary_off"
                android:summaryOn="@string/preference_hide_toolbar_on_scroll_summary_on"
                android:title="@string/preference_hide_toolbar_on_scroll_title"/>

        <android.support.v7.preference.SwitchPreferenceCompat
                android:defaultValue="@bool/preference_confirm_exit_on_back_press_default"
                android:key="@string/preference_confirm_exit_on_back_press_key"
                android:summaryOff="@string/preference_confirm_exit_on_back_press_summary_off"
                android:summaryOn="@string/preference_confirm_exit_on_back_press_summary_on"
                android:title="@string/preference_confirm_exit_on_back_press_title"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
            android:title="@string/preference_category_information">

        <Preference
                android:key="@string/preference_about_key"
                android:summary="@string/preference_about_summary"
                android:title="@string/preference_about_title">
        </Preference>

        <Preference
                android:key="@string/preference_licenses_key"
                android:summary="@string/preference_licenses_summary"
                android:title="@string/preference_licenses_title">
        </Preference>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>