<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_sort_white_24dp"
            android:title="@string/sort"
            app:showAsAction="ifRoom">
        <menu>
            <item
                    android:id="@+id/sort_title_ascending"
                    android:title="@string/sort_title_ascending"/>

            <item
                    android:id="@+id/sort_title_descending"
                    android:title="@string/sort_title_descending"/>
            <item
                    android:id="@+id/sort_timestamp_ascending"
                    android:title="@string/sort_timestamp_ascending"/>

            <item
                    android:id="@+id/sort_timestamp_descending"
                    android:title="@string/sort_timestamp_descending"/>
        </menu>
    </item>

</menu>
