<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/link_edit"
            android:icon="@drawable/ic_edit_grey_600_24dp"
            android:title="@string/edit"/>
    <item
            android:id="@+id/link_category"
            android:icon="@drawable/ic_category_grey_600_24dp"
            android:title="@string/category"/>
    <item
            android:id="@+id/link_share"
            android:icon="@drawable/ic_share_grey_600_24dp"
            android:title="@string/share"/>
    <item
            android:id="@+id/link_copy"
            android:icon="@drawable/ic_copy_grey_600_24dp"
            android:title="@string/copy"/>
    <item
            android:id="@+id/link_delete"
            android:icon="@drawable/ic_delete_grey_600_24dp"
            android:title="@string/delete"/>
</menu>
