<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
            android:id="@+id/nav_drawer_account">
        <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/nav_log_out"/>
    </group>

    <group
            android:id="@+id/nav_drawer_main"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_fresh_links"
                android:icon="@drawable/ic_fresh_links_24dp"
                android:title="@string/nav_fresh_links"/>
        <item
                android:id="@+id/nav_all_links"
                android:icon="@drawable/ic_all_links_24dp"
                android:title="@string/nav_all_links"/>
        <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_favorite_filled_24dp"
                android:title="@string/nav_favorite_links"/>
        <item
                android:id="@+id/nav_archived"
                android:icon="@drawable/ic_archived_24dp"
                android:title="@string/nav_archived_links"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/action_settings"/>
    </group>

</menu>
