<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/add_new_category_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_new_category_name_layout_bottom_margin">

        <EditText
                android:id="@+id/add_new_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:imeOptions="actionSend"
                android:inputType="textAutoCorrect"
                android:maxLength="50"
                tools:text="New Category"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/add_new_category_save_button"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/add_new_category_name_layout"
            android:layout_below="@+id/add_new_category_name_layout"
            android:layout_gravity="end"
            android:text="@string/save"/>

    <Button
            android:id="@+id/add_new_category_cancel_button"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_new_category_name_layout"
            android:layout_gravity="end"
            android:layout_toStartOf="@+id/add_new_category_save_button"
            android:text="@string/cancel"/>

</RelativeLayout>
