<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="editHandler"
                type="com.fernandobarillas.linkshare.activities.EditLinkActivity.EditLinkHandler"/>

        <variable
                name="link"
                type="com.fernandobarillas.linkshare.models.Link"/>

    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.EditLinkActivity">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_link_title_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <EditText
                        android:id="@+id/edit_link_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:text="@{link.title}"
                        tools:text="The max length of the title is 100 characters. This is what it looks like to have 100 characters!!!!"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_link_url_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_link_title_layout">

                <EditText
                        android:id="@+id/edit_link_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textUri"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:text="@{link.url}"
                        tools:text="http://www.example.com/some_page.html"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_link_category_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_link_url_layout">

                <AutoCompleteTextView
                        android:id="@+id/edit_link_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:imeOptions="actionDone"
                        android:maxLength="50"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:singleLine="true"
                        android:text="@{link.category}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                    android:id="@+id/edit_link_archived_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:checked="@{link.archived}"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="@string/archived"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_link_favorite_switch"
                    app:layout_constraintRight_toLeftOf="@+id/edit_link_favorite_switch"/>

            <android.support.v7.widget.SwitchCompat
                    android:id="@+id/edit_link_favorite_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="@{link.favorite}"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="@string/favorite"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_link_category_layout"/>

            <Button
                    android:id="@+id/edit_link_save_button"
                    style="@style/AppButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{editHandler::onClickSave}"
                    android:text="@string/save"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_link_favorite_switch"/>

            <Button
                    android:id="@+id/edit_link_cancel_button"
                    style="@style/AppButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="@{editHandler::onClickCancel}"
                    android:text="@string/cancel"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_link_save_button"
                    app:layout_constraintRight_toLeftOf="@+id/edit_link_save_button"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
